--- a/action.yaml
+++ b/action.yaml
@@ -43,10 +43,7 @@ inputs:
     description: Verbose configuration
     required: false
   DYNAMIC_INPUTS:
-    description: |
-      Dynamic Variables
-      --key1 value1
-      --key2 value2
+    description: --key1 value1 --key2 value2
     required: false
     default: ""
 
