--- a/action.yaml
+++ b/action.yaml
@@ -88,7 +88,7 @@ runs:
         python-version: '3.10' 
 
     - name: Install python libraries 
-      run: pip install pyyaml requests
+      run: pip install requests ruamel-yaml==0.17.33
       shell: bash
 
     - name: Setup STK CLI
