#785 - dev environment workflow

--- a/action.yaml
+++ b/action.yaml
@@ -82,7 +82,7 @@ runs:
       shell: bash
 
     - name: Setup STK CLI
-      uses: stack-spot/stk-cli-action@stg
+      uses: stack-spot/stk-cli-action@dev
       with:
         client_id: ${{ inputs.CLIENT_ID }}
         client_key: ${{ inputs.CLIENT_KEY }}
@@ -90,7 +90,7 @@ runs:
 
     - name: Generate manifesto
       run: |
-        stk-stg use workspace ${{ inputs.WORKSPACE }}
+        stk-dev use workspace ${{ inputs.WORKSPACE }}
         
         FLAGS=$(echo "--env ${{ inputs.ENVIRONMENT }} --target ${{ github.action_path }} --version ${{ inputs.VERSION_TAG }}")
         
@@ -103,10 +103,10 @@ runs:
         fi
         
         if [ ! -z "${{ inputs.VERBOSE }}" ]; then
-          echo "STK-STG DEPLOY PLAN FLAGS = $FLAGS"
+          echo "stk-dev DEPLOY PLAN FLAGS = $FLAGS"
         fi
 
-        stk-stg deploy plan $FLAGS
+        stk-dev deploy plan $FLAGS
       shell: bash
 
     - name: Start Self Hosted DEPLOY run with Runtime
