--- a/action.yaml
+++ b/action.yaml
@@ -72,7 +72,7 @@ runs:
       shell: bash
       
     - name: check envs
-      run: |        
+      run: |
         echo "${{ inputs.TF_STATE_BUCKET_NAME }}"
         echo "${{ inputs.IAC_REGION }}"
       shell: bash
@@ -102,27 +102,24 @@ runs:
 
     - name: Setup STK CLI
       if: inputs.BETA_CLI_ENVIRONMENT == 'default'
-      uses: stack-spot/stk-cli-action@main
-      with:
-        client_id: ${{ inputs.CLIENT_ID }}
-        client_key: ${{ inputs.CLIENT_KEY }}
-        realm: ${{ inputs.CLIENT_REALM }}
+      run: |
+        curl -fsSL https://stk.stackspot.com/install.sh | bash
+        $HOME/.stk/bin/stk login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
+      shell: bash
 
     - name: Setup STK CLI STG
       if: inputs.BETA_CLI_ENVIRONMENT == 'stg'
-      uses: stack-spot/stk-cli-action@stg
-      with:
-        client_id: ${{ inputs.CLIENT_ID }}
-        client_key: ${{ inputs.CLIENT_KEY }}
-        realm: ${{ inputs.CLIENT_REALM }}
+      run: |
+        curl -fsSL https://stk-cli.stg.stackspot.com/install-stg.sh | bash
+        $HOME/.stk-stg/bin/stk-stg login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
+      shell: bash
 
     - name: Setup STK CLI DEV
       if: inputs.BETA_CLI_ENVIRONMENT == 'dev'
-      uses: stack-spot/stk-cli-action@dev
-      with:
-        client_id: ${{ inputs.CLIENT_ID }}
-        client_key: ${{ inputs.CLIENT_KEY }}
-        realm: ${{ inputs.CLIENT_REALM }}
+      run: |
+        curl -fsSL https://stk-cli.dev.stackspot.com/install-dev.sh | bash
+        $HOME/.stk-dev/bin/stk-dev login --client-id=${{ inputs.CLIENT_ID }} --client-key=${{ inputs.CLIENT_KEY }} --realm=${{ inputs.CLIENT_REALM }}
+      shell: bash
 
     - name: Generate manifesto
       working-directory: ${{ inputs.WORKDIR }}
@@ -131,15 +128,15 @@ runs:
         LANGUAGE: C.UTF-8
         LC_ALL: C.UTF-8
         PYTHONIOENCODING: utf-8
-      run: |   
+      run: |
         if [ "${{ inputs.BETA_CLI_ENVIRONMENT }}" == "default" ]; then
-          CLI="stk"
+          CLI="$HOME/.stk/bin/stk"
         
         elif [ "${{ inputs.BETA_CLI_ENVIRONMENT }}" == "stg" ]; then
-          CLI="stk-stg"
+          CLI="$HOME/.stk-stg/bin/stk-stg"
         
         elif [ "${{ inputs.BETA_CLI_ENVIRONMENT }}" == "dev" ]; then
-          CLI="stk-dev"
+          CLI="$HOME/.stk-dev/bin/stk-dev"
         
         else
           echo "Invalid environment: ${{ inputs.BETA_CLI_ENVIRONMENT }}"
