--- a/action.yaml
+++ b/action.yaml
@@ -174,7 +174,7 @@ runs:
       run: |
         if [ "${{ inputs.BETA_CLI_ENVIRONMENT }}" == "default" ]; then
           STACKSPOT_IAM_URL="https://auth.stackspot.com"
-          STACKSPOT_RUNTIME_MANAGER_URL="https://runtime-manager.v1.stackspot.com"
+          STACKSPOT_RUNTIME_MANAGER_URL="https://runtime-manager.stackspot.com"
         
         elif [ "${{ inputs.BETA_CLI_ENVIRONMENT }}" == "stg" ]; then
           STACKSPOT_IAM_URL="https://iam-auth-ssr.stg.stackspot.com"
