--- a/action.yaml
+++ b/action.yaml
@@ -21,6 +21,10 @@ inputs:
   VERSION_TAG:
     description: Deploy version tag
     required: true
+  SKIP_DEPLOY:
+    description: Allows for deploys to be skiiped if the manifesto has not changed.
+    required: false
+    default: False
   BRANCH:
     description: Branch to perform checkout in Runtime
     required: false
@@ -205,6 +209,7 @@ runs:
         IAC_BUCKET_NAME: ${{ inputs.IAC_BUCKET_NAME }}
         IAC_REGION: ${{ inputs.IAC_REGION }}
         VERBOSE: ${{ inputs.VERBOSE }}
+        SKIP_DEPLOY: ${{ inputs.SKIP_DEPLOY }}
       run: |
         if [ ${{runner.os}} != 'Windows' ]; then
           python3 ${{ github.action_path }}/runtime.py
